Changed padding and gap size to make sure header links align with placeholder

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,8 +16,8 @@
 
 .header {
     display: flex;
-    padding: 20px 150px;
-    gap: 500px;
+    padding: 20px 100px 20px 150px;
+    gap: 560px;
 }
 
 .hero {
